服务保活与注册etcd，业务信息存储
